--- a/style.css
+++ b/style.css
@@ -23,8 +23,54 @@ body {
     background: var(--bg);
 }
 
-.box {
+#stage {
+    position: relative;
+    width: 80%;
+    height: 80%;
     /* padding: 10px; */
+
     /* background: linear-gradient(to left, var(--fg-right), var(--fg-left)); */
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+#app {
+    width: 100%;
+    height: 100%;
+}
+
+#playback {
+    opacity: .2;
+    transition: opacity .5s;
+
+ 
+    &:not([data-playing]) #pause {
+        display: none;
+    }
+
+    .icon {
+        position: absolute;
+        width: 5%;
+        height: auto;
+
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 3%;
+
+        background: var(--bg);
+        color: var(--fg-right);
+        /* border: 10px solid var(--bg); */
+        border-radius: 15%;
+    }
+}
+
+@starting-style {
+    #playback {
+        opacity: .2;
+    }
+}
+
+@media(hover: hover) {
+    #playback:hover {
+        opacity: 1;
+    }
 }
