--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
 #playback {
     position: absolute;
     max-width: min(10vw, 10vh);
-    min-width: .5rem;
-    width: 2rem;
+    min-width: 2rem;
+    width: 5rem;
     height: auto;
 
     left: 50%;
